# test_libnb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_x86/src/: Makefile  cmake_install.cmake
include/: log.h  nativebridge.h  patches.h
include/nbtools/: patchHex.h
src/: CMakeLists.txt  houdini_11_38765_patches.cpp  houdini_12_38818_patches.cpp  houdini_13_39190_patches.cpp  houdini_14_39441_patches.cpp  houdini_38765_patches.cpp  main.cpp  ndk_translation_R112-15359.58.0_patches.cpp  ndk_translation_R125-15853.53.0_patches.cpp
